# Analyzer_threats

./: .gitignore  AnalyzInformation.h  CMakeLists.txt  README.md  config.h  main.cpp  todolist.txt
Analyzer/include/: Analyzer.h  I_Analyzer.h  searchingString.h
Analyzer/src/: Analyzer.cpp
Client/: Client.cpp  testClient.cpp
Client/Network/include/: I_NetworkClient.h  NetworkClient.h
Client/Network/src/: NetworkClient.cpp
CommunicateProtocol/Message/: Message.h
Daemon/: Daemon.cpp  firstdaemon  testServer.cpp
Daemon/Analyzer/include/: Analyzer.h  I_Analyzer.h
Daemon/Analyzer/src/: Analyzer.cpp
Daemon/Network/include/: NetworkDaemon.h
Daemon/Network/src/: NetworkDaemon.cpp
